# intake-html-table

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  compose.yaml  compose.yml  devcontainer.json  postcreate.sh  requirements.txt
.github/workflows/: pre-commit.yml  test.yml
examples/: cat.yaml  data.csv  document.html  examples.ipynb  index.html  notebook.ipynb  table.html
examples/sub/: data.csv  index.html
intake_html_table/: __init__.py  apache_dir.py  catalog.py  html_table.py  source.py
tests/: conftest.py  examples.py  source_test.py  test_apache_dir.py  test_html_table.py
