[project]
name = "intake-html-table"
description = "Intake plugin for HTML tables, e.g. index pages from webservers."
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "Compiler LLC", email = "dev@compiler.la" }
]
license = { file = "LICENSE" }
keywords = ["intake", "catalog"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.7.4",
    "beautifulsoup4>=4.9.3",
    "html5lib>=1.1",
    "intake>=0.6.2",
    "lxml>=4.6.3",
    "msgpack>=1.0.2",
    "pandas>=1.3.0",
    "requests>=2.25.1"
]

[project.entry-points."intake.drivers"]
apache_dir = "intake_html_table.apache_dir:ApacheDirectoryCatalog"
html_table = "intake_html_table.html_table:HtmlTableSource"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "coverage-badge",
    "flake8",
    "ipykernel",
    "pre-commit",
    "pytest"
]

[project.urls]
code = "https://github.com/compilerla/intake-html-table"
tracker = "https://github.com/compilerla/intake-html-table/issues"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]

[tool.setuptools]
packages = ["intake_html_table"]
